search form fixed alignment

--- a/client/src/components/Nav/Nav.css
+++ b/client/src/components/Nav/Nav.css
@@ -1,3 +1,3 @@
 .navbar {
-    background-color: white;
+    background-color: blue;
 }
